# Serendipia

./: README.md
FrontEnd/: bun.lockb  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.js  wrangler.toml
FrontEnd/src/: App.jsx  index.css
FrontEnd/src/components/: .env  AgentList.jsx  ChatComponent.jsx  Hero.jsx  Morph.jsx  Navbar.jsx  Sidebar.jsx  Terminaldemo.jsx  morph.jsx  respons.json  sandbox.jsx
FrontEnd/src/pages/: Homepage.jsx  Maincard.jsx  PromptPalDashboard.jsx  layout.jsx
backend/: README.md  gemini.py  manage.py  pyproject.toml
backend/app/: openai.py  test.ipynb
backend/app/api/v1/: .env  deepseek.py  serendia.py
backend/app/auth/: __init__.py  authfunction.py  authrouter.py  hassing.py
backend/app/core/: .env  __init__.py  gemenivecotr.py  test.ipynb  vector.py  vectordb.py
backend/app/duckai/: __init__.py  duckapi.py  duckmodel.py  excptions.py  generatemodel.py  model.py
backend/app/functions/: basictools.py
backend/app/models/: __init__.py  chatmodel.py  user.py
backend/app/schemas/: __init__.py  chatschemas.py  userschemas.py
backend/app/settings/: .env  __init__.py  database.py  settings.py
backend/backend/: test.ipynb
backend/backend/settings/: .env  settings.py
backend/pythonagent/documents/: test.ipynb
backend/serendipia/: asgi.py  settings.py  urls.py  wsgi.py
backend/telegram/: telegram.py  test.ipynb
backend/telegram/apis/: .env  deepsheek.py  flash.py  quan.py
backend/template/: googlesearch.html
